# headroom-lite

./: .gitignore  .npmignore  CHANGELOG.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md
docs/: com.myelin.llmlingua.plist.example  llmlingua.md
services/llmlingua/: README.md  pyproject.toml
services/llmlingua/headroom_lingua_service/: __main__.py  backends.py
services/llmlingua/tests/: test_service.py
src/: index.mjs  proxy.mjs  server.mjs
src/analyze/: drift-detector.mjs  volatile-detector.mjs
src/compress/: adaptive-sizer.mjs  cross-turn-dedup.mjs  diff-noise-filter.mjs  (+9 more)
test/: cli-version.test.mjs  compress-adaptive-sizer.test.mjs  compress-cross-turn-dedup.test.mjs  compress-live-flag.test.mjs  compress-lossless-compaction.test.mjs  compress-pipeline.test.mjs  compress-responses.test.mjs  compress-tool-output-compactor.test.mjs  diff-noise-filter.test.mjs  drift-detector.test.mjs  estimate-tokens.test.mjs  frozen-prefix.test.mjs  json-minifier.test.mjs  live-zone-compression.test.mjs  lossy-client.test.mjs  lossy-config.test.mjs  lossy-eligibility.test.mjs  lossy-guards.test.mjs  lossy-pipeline.test.mjs  lossy-server.test.mjs  multi-upstream.test.mjs  observability-ledger.test.mjs  openai-cache-key.test.mjs  openai-params.test.mjs  package-release.test.mjs  providers-detect.test.mjs  proxy.test.mjs  server.test.mjs  tag-protector.test.mjs  tool-normalization.test.mjs  volatile-detector.test.mjs
(+12 files in other folders)
